--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "watch": "tsc --watch",
     "start": "node dist/index.js",
     "dev": "tsc && node dist/index.js",
+    "cli": "tsc && node dist/cli/dev-cli.js",
+    "cli:mock": "npm run cli -- --mock",
     "sync:specs": "node scripts/sync-specs.js",
     "validate": "node scripts/validate-registry.js",
     "test": "vitest run",
@@ -22,7 +24,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
     "prepare": "husky install || true",
-    "prebuild": "npm run sync:specs"
+    "prebuild": "npm run sync:specs",
+    "health": "node dist/cli/health-check.js"
   },
   "keywords": [
     "akamai",
